tests/ui/lang/core/ptr/allocate_const_scalar.stderr
error: pointer has non-null integer address
   |
note: used from within `allocate_const_scalar::main`
  --> $DIR/allocate_const_scalar.rs:15:20
   |
15 |     let _pointer = POINTER;
   |                    ^^^^^^^
note: called by `main`
  --> $DIR/allocate_const_scalar.rs:14:8
   |
14 | pub fn main() {
   |        ^^^^

error: aborting due to previous error

